k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sre-challenge-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: sre-challenge-app
  template:
    metadata:
      labels:
        app: sre-challenge-app
    spec:
      containers:
      - name: fastapi-container
        image: jmuachifi/sre-challenge-argocd:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 5
        resources:
          limits:
            memory: "256Mi"
            cpu: "500m"
          requests:
            memory: "128Mi"
            cpu: "250m"
