k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sre-challenge-service
spec:
  selector:
    app: sre-challenge-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
  type: NodePort
