k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sre-challenge-ingress
spec:
  rules:
  - host: aks-adevops.duckdns.org  # Replace with your domain or subdomain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sre-challenge-service
            port:
              number: 80
